src/main/antlr/com/kuuhaku/ShoukanExprParser.java
// Generated from C:/Users/dev204/Desktop/ShiroJBot/src/main/antlr\ShoukanExpr.g4 by ANTLR 4.12.0
package com.kuuhaku;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;

import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class ShoukanExprParser extends Parser {
	static {
		RuntimeMetaData.checkVersion("4.12.0", RuntimeMetaData.VERSION);
	}

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
			new PredictionContextCache();
	public static final int
			T__0 = 1, T__1 = 2, T__2 = 3, MUL = 4, DIV = 5, SUM = 6, SUB = 7, MIN = 8, MAX = 9, NUM = 10,
			NAME = 11, VAR = 12;
	public static final int
			RULE_line = 0, RULE_expr = 1;

	private static String[] makeRuleNames() {
		return new String[]{
				"line", "expr"
		};
	}

	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[]{
				null, "'('", "','", "')'", "'*'", "'/'", "'+'", "'-'", "'min'", "'max'"
		};
	}

	private static final String[] _LITERAL_NAMES = makeLiteralNames();

	private static String[] makeSymbolicNames() {
		return new String[]{
				null, null, null, null, "MUL", "DIV", "SUM", "SUB", "MIN", "MAX", "NUM",
				"NAME", "VAR"
		};
	}

	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;

	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() {
		return "ShoukanExpr.g4";
	}

	@Override
	public String[] getRuleNames() {
		return ruleNames;
	}

	@Override
	public String getSerializedATN() {
		return _serializedATN;
	}

	@Override
	public ATN getATN() {
		return _ATN;
	}

	public ShoukanExprParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LineContext extends ParserRuleContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class, 0);
		}

		public LineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_line;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof ShoukanExprListener) ((ShoukanExprListener) listener).enterLine(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof ShoukanExprListener) ((ShoukanExprListener) listener).exitLine(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof ShoukanExprVisitor)
				return ((ShoukanExprVisitor<? extends T>) visitor).visitLine(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LineContext line() throws RecognitionException {
		LineContext _localctx = new LineContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_line);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(4);
				expr(0);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExprContext extends ParserRuleContext {
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_expr;
		}

		public ExprContext() {
		}

		public void copyFrom(ExprContext ctx) {
			super.copyFrom(ctx);
		}
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SumSubContext extends ExprContext {
		public ExprContext left;
		public Token op;
		public ExprContext right;

		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}

		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class, i);
		}

		public TerminalNode SUM() {
			return getToken(ShoukanExprParser.SUM, 0);
		}

		public TerminalNode SUB() {
			return getToken(ShoukanExprParser.SUB, 0);
		}

		public SumSubContext(ExprContext ctx) {
			copyFrom(ctx);
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof ShoukanExprListener) ((ShoukanExprListener) listener).enterSumSub(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof ShoukanExprListener) ((ShoukanExprListener) listener).exitSumSub(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof ShoukanExprVisitor)
				return ((ShoukanExprVisitor<? extends T>) visitor).visitSumSub(this);
			else return visitor.visitChildren(this);
		}
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FunctionContext extends ExprContext {
		public Token func;
		public ExprContext left;
		public ExprContext right;

		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}

		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class, i);
		}

		public TerminalNode MIN() {
			return getToken(ShoukanExprParser.MIN, 0);
		}

		public TerminalNode MAX() {
			return getToken(ShoukanExprParser.MAX, 0);
		}

		public FunctionContext(ExprContext ctx) {
			copyFrom(ctx);
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof ShoukanExprListener) ((ShoukanExprListener) listener).enterFunction(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof ShoukanExprListener) ((ShoukanExprListener) listener).exitFunction(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof ShoukanExprVisitor)
				return ((ShoukanExprVisitor<? extends T>) visitor).visitFunction(this);
			else return visitor.visitChildren(this);
		}
	}

	@SuppressWarnings("CheckReturnValue")
	public static class GroupContext extends ExprContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class, 0);
		}

		public TerminalNode SUB() {
			return getToken(ShoukanExprParser.SUB, 0);
		}

		public GroupContext(ExprContext ctx) {
			copyFrom(ctx);
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof ShoukanExprListener) ((ShoukanExprListener) listener).enterGroup(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof ShoukanExprListener) ((ShoukanExprListener) listener).exitGroup(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof ShoukanExprVisitor)
				return ((ShoukanExprVisitor<? extends T>) visitor).visitGroup(this);
			else return visitor.visitChildren(this);
		}
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MulDivContext extends ExprContext {
		public ExprContext left;
		public Token op;
		public ExprContext right;

		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}

		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class, i);
		}

		public TerminalNode MUL() {
			return getToken(ShoukanExprParser.MUL, 0);
		}

		public TerminalNode DIV() {
			return getToken(ShoukanExprParser.DIV, 0);
		}

		public MulDivContext(ExprContext ctx) {
			copyFrom(ctx);
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof ShoukanExprListener) ((ShoukanExprListener) listener).enterMulDiv(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof ShoukanExprListener) ((ShoukanExprListener) listener).exitMulDiv(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof ShoukanExprVisitor)
				return ((ShoukanExprVisitor<? extends T>) visitor).visitMulDiv(this);
			else return visitor.visitChildren(this);
		}
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ValueContext extends ExprContext {
		public Token element;

		public TerminalNode VAR() {
			return getToken(ShoukanExprParser.VAR, 0);
		}

		public TerminalNode NUM() {
			return getToken(ShoukanExprParser.NUM, 0);
		}

		public TerminalNode SUB() {
			return getToken(ShoukanExprParser.SUB, 0);
		}

		public ValueContext(ExprContext ctx) {
			copyFrom(ctx);
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof ShoukanExprListener) ((ShoukanExprListener) listener).enterValue(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof ShoukanExprListener) ((ShoukanExprListener) listener).exitValue(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof ShoukanExprVisitor)
				return ((ShoukanExprVisitor<? extends T>) visitor).visitValue(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExprContext expr() throws RecognitionException {
		return expr(0);
	}

	private ExprContext expr(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ExprContext _localctx = new ExprContext(_ctx, _parentState);
		ExprContext _prevctx = _localctx;
		int _startState = 2;
		enterRecursionRule(_localctx, 2, RULE_expr, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
				setState(25);
				_errHandler.sync(this);
				switch (getInterpreter().adaptivePredict(_input, 2, _ctx)) {
					case 1: {
						_localctx = new FunctionContext(_localctx);
						_ctx = _localctx;
						_prevctx = _localctx;

						setState(7);
						((FunctionContext) _localctx).func = _input.LT(1);
						_la = _input.LA(1);
						if (!(_la == MIN || _la == MAX)) {
							((FunctionContext) _localctx).func = (Token) _errHandler.recoverInline(this);
						} else {
							if (_input.LA(1) == Token.EOF) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						setState(8);
						match(T__0);
						setState(9);
						((FunctionContext) _localctx).left = expr(0);
						setState(10);
						match(T__1);
						setState(11);
						((FunctionContext) _localctx).right = expr(0);
						setState(12);
						match(T__2);
					}
					break;
					case 2: {
						_localctx = new GroupContext(_localctx);
						_ctx = _localctx;
						_prevctx = _localctx;
						setState(15);
						_errHandler.sync(this);
						_la = _input.LA(1);
						if (_la == SUB) {
							{
								setState(14);
								match(SUB);
							}
						}

						setState(17);
						match(T__0);
						setState(18);
						expr(0);
						setState(19);
						match(T__2);
					}
					break;
					case 3: {
						_localctx = new ValueContext(_localctx);
						_ctx = _localctx;
						_prevctx = _localctx;
						setState(22);
						_errHandler.sync(this);
						_la = _input.LA(1);
						if (_la == SUB) {
							{
								setState(21);
								match(SUB);
							}
						}

						setState(24);
						((ValueContext) _localctx).element = _input.LT(1);
						_la = _input.LA(1);
						if (!(_la == NUM || _la == VAR)) {
							((ValueContext) _localctx).element = (Token) _errHandler.recoverInline(this);
						} else {
							if (_input.LA(1) == Token.EOF) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
					}
					break;
				}
				_ctx.stop = _input.LT(-1);
				setState(35);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input, 4, _ctx);
				while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
					if (_alt == 1) {
						if (_parseListeners != null) triggerExitRuleEvent();
						_prevctx = _localctx;
						{
							setState(33);
							_errHandler.sync(this);
							switch (getInterpreter().adaptivePredict(_input, 3, _ctx)) {
								case 1: {
									_localctx = new MulDivContext(new ExprContext(_parentctx, _parentState));
									((MulDivContext) _localctx).left = _prevctx;
									pushNewRecursionContext(_localctx, _startState, RULE_expr);
									setState(27);
									if (!(precpred(_ctx, 5)))
										throw new FailedPredicateException(this, "precpred(_ctx, 5)");
									setState(28);
									((MulDivContext) _localctx).op = _input.LT(1);
									_la = _input.LA(1);
									if (!(_la == MUL || _la == DIV)) {
										((MulDivContext) _localctx).op = (Token) _errHandler.recoverInline(this);
									} else {
										if (_input.LA(1) == Token.EOF) matchedEOF = true;
										_errHandler.reportMatch(this);
										consume();
									}
									setState(29);
									((MulDivContext) _localctx).right = expr(6);
								}
								break;
								case 2: {
									_localctx = new SumSubContext(new ExprContext(_parentctx, _parentState));
									((SumSubContext) _localctx).left = _prevctx;
									pushNewRecursionContext(_localctx, _startState, RULE_expr);
									setState(30);
									if (!(precpred(_ctx, 4)))
										throw new FailedPredicateException(this, "precpred(_ctx, 4)");
									setState(31);
									((SumSubContext) _localctx).op = _input.LT(1);
									_la = _input.LA(1);
									if (!(_la == SUM || _la == SUB)) {
										((SumSubContext) _localctx).op = (Token) _errHandler.recoverInline(this);
									} else {
										if (_input.LA(1) == Token.EOF) matchedEOF = true;
										_errHandler.reportMatch(this);
										consume();
									}
									setState(32);
									((SumSubContext) _localctx).right = expr(5);
								}
								break;
							}
						}
					}
					setState(37);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input, 4, _ctx);
				}
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public boolean sempred(RuleContext _localctx, int ruleIndex, int predIndex) {
		switch (ruleIndex) {
			case 1:
				return expr_sempred((ExprContext) _localctx, predIndex);
		}
		return true;
	}

	private boolean expr_sempred(ExprContext _localctx, int predIndex) {
		switch (predIndex) {
			case 0:
				return precpred(_ctx, 5);
			case 1:
				return precpred(_ctx, 4);
		}
		return true;
	}

	public static final ATN _ATN =
			new ATNDeserializer().deserialize(_serializedATN.toCharArray());

	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}